--- a/winproject/mupen64/mupen64.vcxproj
+++ b/winproject/mupen64/mupen64.vcxproj
@@ -170,6 +170,7 @@
     <ClInclude Include="..\..\main\speex\arch.h" />
     <ClInclude Include="..\..\main\win\features\CrashHelper.h" />
     <ClInclude Include="..\..\main\win\features\CoreDbg.h" />
+    <ClInclude Include="..\..\main\win\features\GameControl.h" />
     <ClInclude Include="..\..\main\win\features\MovieDialog.h" />
     <ClInclude Include="..\..\main\win\features\RomBrowser.hpp" />
     <ClInclude Include="..\..\main\win\features\Statusbar.hpp" />
@@ -247,6 +248,7 @@
     </ClCompile>
     <ClCompile Include="..\..\main\win\features\CrashHelper.cpp" />
     <ClCompile Include="..\..\main\win\features\CoreDbg.cpp" />
+    <ClCompile Include="..\..\main\win\features\MGECompositor.cpp" />
     <ClCompile Include="..\..\main\win\features\MovieDialog.cpp" />
     <ClCompile Include="..\..\main\win\features\RomBrowser.cpp" />
     <ClCompile Include="..\..\main\win\features\Statusbar.cpp" />
