Movie Dialog: Disable read-only controls in play and record modes

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -320,7 +320,7 @@ END
 
 IDD_MOVIE_DIALOG DIALOGEX 0, 0, 343, 269
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "Play Movie"
+CAPTION "Movie"
 FONT 8, "MS Shell Dlg", 400, 0, 0x0
 BEGIN
     EDITTEXT        IDC_INI_MOVIEFILE,61,6,212,12,ES_AUTOHSCROLL
