--- a/winproject/mupen64/mupen64.vcxproj
+++ b/winproject/mupen64/mupen64.vcxproj
@@ -173,6 +173,7 @@
     <ClInclude Include="..\..\main\win\features\GameControl.h" />
     <ClInclude Include="..\..\main\win\features\MovieDialog.h" />
     <ClInclude Include="..\..\main\win\features\RomBrowser.hpp" />
+    <ClInclude Include="..\..\main\win\features\Seeker.h" />
     <ClInclude Include="..\..\main\win\features\Statusbar.hpp" />
     <ClInclude Include="..\..\main\win\Commandline.h" />
     <ClInclude Include="..\..\main\win\Config.hpp" />
@@ -251,6 +252,7 @@
     <ClCompile Include="..\..\main\win\features\MGECompositor.cpp" />
     <ClCompile Include="..\..\main\win\features\MovieDialog.cpp" />
     <ClCompile Include="..\..\main\win\features\RomBrowser.cpp" />
+    <ClCompile Include="..\..\main\win\features\Seeker.cpp" />
     <ClCompile Include="..\..\main\win\features\Statusbar.cpp" />
     <ClCompile Include="..\..\main\win\Commandline.cpp">
       <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
