--- a/winproject/mupen64/CMakeLists.txt
+++ b/winproject/mupen64/CMakeLists.txt
@@ -140,6 +140,7 @@ set(Headers
     "../../main/win/features/CrashHelper.h"
     "../../main/win/features/MovieDialog.h"
     "../../main/win/features/RomBrowser.hpp"
+    "../../main/win/features/Seeker.h"
     "../../main/win/features/Statusbar.hpp"
     "../../main/win/main_win.h"
     "../../main/win/timers.h"
@@ -196,6 +197,7 @@ set(Sources
     "../../main/win/features/MGECompositor.cpp"
     "../../main/win/features/MovieDialog.cpp"
     "../../main/win/features/rombrowser.cpp"
+    "../../main/win/features/Seeker.cpp"
     "../../main/win/features/Statusbar.cpp"
     "../../main/win/guifuncs.cpp"
     "../../main/win/main_win.cpp"
@@ -605,6 +607,9 @@ set(ADDITIONAL_LIBRARY_DEPENDENCIES
     "Msimg32;"
     "Gdiplus;"
     "d2d1;"
+    "d3d11;"
+    "dcomp;"
+    "dxgi;"
     "dwrite;"
     "deflate;"
     "Dbghelp;"
