--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -185,26 +185,6 @@ BEGIN
     LTEXT           "Mupen 64 1.1.7",IDC_STATIC,70,30,120,12
 END
 
-IDD_ADVANCED_OPTIONS DIALOGEX 0, 0, 231, 273
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP
-FONT 8, "MS Shell Dlg", 0, 0, 0x0
-BEGIN
-    CONTROL         "Pause when unfocused",IDC_PAUSENOTACTIVE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,90,174,8
-    GROUPBOX        "Core",IDC_STATIC,6,6,215,66
-    CONTROL         "Audio Delay",IDC_ENABLE_AUDIO_DELAY,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,12,18,96,8
-    CONTROL         "Compiled Jump",IDC_ENABLE_COMPILED_JUMP,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,12,30,96,8
-    CONTROL         "Emulate float crashes",IDC_EMULATEFLOATCRASHES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,42,96,8
-    CONTROL         "WiiVC Rounding",IDC_ROUNDTOZERO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,54,96,10
-    GROUPBOX        "Recording",IDC_RECORDINGOPT,6,126,216,43
-    CONTROL         "Record resets",IDC_RECORD_RESETS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,140,100,8
-    CONTROL         "Force internal avi capture",IDC_FORCEINTERNAL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,150,96,8
-    GROUPBOX        "UI",IDC_STATIC,6,78,216,42
-    CONTROL         "Emulate SD Card",IDC_USESUMMERCART,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,176,96,10
-    LTEXT           "Capture delay:",IDC_STATIC,117,151,49,12
-    EDITTEXT        IDC_CAPTUREDELAY,167,150,35,12,ES_AUTOHSCROLL | ES_NUMBER
-    CONTROL         "Capture other windows",IDC_CAPTUREOTHER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,118,140,91,10
-END
-
 IDD_OTHER_OPTIONS_DIALOG DIALOGEX 0, 0, 231, 273
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
@@ -302,15 +282,27 @@ IDD_MESSAGES DIALOGEX 0, 0, 231, 262
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
-    GROUPBOX        "Alerts",IDC_MESSAGES,6,6,216,42
-    GROUPBOX        "Flow",IDC_FPSTITLE,6,54,215,54
-    GROUPBOX        "Core",IDC_CPUCORE,6,114,216,54
-    CONTROL         "Interpreter",IDC_INTERP,"Button",BS_AUTORADIOBUTTON,12,126,204,8
-    CONTROL         "Dynamic Recompiler",IDC_RECOMP,"Button",BS_AUTORADIOBUTTON,12,138,204,8
-    CONTROL         "Pure Interpreter",IDC_PURE_INTERP,"Button",BS_AUTORADIOBUTTON,12,150,204,8
-    EDITTEXT        IDC_SKIPFREQ,114,90,78,12,ES_AUTOHSCROLL | ES_NUMBER
-    LTEXT           "Fast forward skip frequency:",IDC_FASTFORWARDSKIPFREQ,12,90,96,12,SS_CENTERIMAGE
-    PUSHBUTTON      "?",IDC_SKIPFREQUENCY_HELP,198,90,14,12
+    GROUPBOX        "Interface",IDC_MESSAGES,6,6,216,42
+    GROUPBOX        "Flow",IDC_FPSTITLE,6,54,215,30
+    GROUPBOX        "Core",IDC_CPUCORE,6,144,216,108
+    CONTROL         "Interpreter",IDC_INTERP,"Button",BS_AUTORADIOBUTTON,12,162,204,8
+    CONTROL         "Dynamic Recompiler",IDC_RECOMP,"Button",BS_AUTORADIOBUTTON,12,174,204,8
+    CONTROL         "Pure Interpreter",IDC_PURE_INTERP,"Button",BS_AUTORADIOBUTTON,12,186,204,8
+    EDITTEXT        IDC_SKIPFREQ,114,66,78,12,ES_AUTOHSCROLL | ES_NUMBER
+    LTEXT           "Fast forward skip frequency:",IDC_FASTFORWARDSKIPFREQ,12,66,96,12,SS_CENTERIMAGE
+    PUSHBUTTON      "?",IDC_SKIPFREQUENCY_HELP,198,66,14,12
+    CONTROL         "Audio Delay",IDC_ENABLE_AUDIO_DELAY,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,12,198,96,8
+    CONTROL         "Compiled Jump",IDC_ENABLE_COMPILED_JUMP,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,12,210,96,8
+    CONTROL         "Emulate float crashes",IDC_EMULATEFLOATCRASHES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,222,96,8
+    CONTROL         "WiiVC Rounding",IDC_ROUNDTOZERO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,234,96,10
+    CONTROL         "Pause when unfocused",IDC_PAUSENOTACTIVE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,18,174,8
+    GROUPBOX        "Encoding",IDC_FPSTITLE2,6,84,215,48
+    CONTROL         "Record resets",IDC_RECORD_RESETS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,96,100,8
+    CONTROL         "Force internal avi capture",IDC_FORCEINTERNAL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,108,96,8
+    CONTROL         "Emulate SD Card",IDC_USESUMMERCART,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,120,96,8
+    CONTROL         "Capture other windows",IDC_CAPTUREOTHER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,114,96,91,8
+    LTEXT           "Capture delay:",IDC_STATIC,114,114,49,12
+    EDITTEXT        IDC_CAPTUREDELAY,164,114,35,12,ES_AUTOHSCROLL | ES_NUMBER
 END
 
 IDD_MOVIE_DIALOG DIALOGEX 0, 0, 343, 269
@@ -489,10 +481,6 @@ BEGIN
     BEGIN
     END
 
-    IDD_ADVANCED_OPTIONS, DIALOG
-    BEGIN
-    END
-
     IDD_OTHER_OPTIONS_DIALOG, DIALOG
     BEGIN
     END
@@ -548,11 +536,6 @@ END
 //
 // AFX_DIALOG_LAYOUT
 //
-
-IDD_ADVANCED_OPTIONS AFX_DIALOG_LAYOUT
-BEGIN
-    0
-END
 
 IDD_MESSAGES AFX_DIALOG_LAYOUT
 BEGIN
