View/MovieDialog: Use ListView for displaying data

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -312,50 +312,23 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x0
 BEGIN
     EDITTEXT        IDC_INI_MOVIEFILE,61,6,212,12,ES_AUTOHSCROLL
     PUSHBUTTON      "Browse...",IDC_MOVIE_BROWSE,283,4,50,14
-    EDITTEXT        IDC_PAUSEAT_FIELD,289,149,33,13,ES_AUTOHSCROLL | ES_NUMBER
-    DEFPUSHBUTTON   "OK",IDC_OK,231,200,50,14
-    PUSHBUTTON      "Cancel",IDC_CANCEL,289,200,50,14
-    LTEXT           "Name:",IDC_ROM_INTERNAL_NAME_TEXT,13,85,31,8
-    LTEXT           "Country:",IDC_ROM_COUNTRY_TEXT,13,96,32,8
-    EDITTEXT        IDC_ROM_INTERNAL_NAME,46,85,50,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_ROM_COUNTRY,46,96,50,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    GROUPBOX        "Plugins",IDC_ROM_PLUGINS,6,138,140,60
-    LTEXT           "Video:",IDC_GFXPLUGIN,14,149,32,10
-    LTEXT           "Sound:",IDC_SOUNDPLUGIN,14,162,31,8
-    LTEXT           "Input:",IDC_INPUTPLUGIN,14,173,31,8
-    LTEXT           "RSP:",IDC_RSPPLUGIN,14,186,32,8
+    EDITTEXT        IDC_PAUSEAT_FIELD,270,150,33,13,ES_AUTOHSCROLL | ES_NUMBER
+    DEFPUSHBUTTON   "OK",IDC_OK,240,198,48,12
+    PUSHBUTTON      "Cancel",IDC_CANCEL,288,198,48,12
     LTEXT           "Movie File:",IDC_INI_MOVIEFILE_TEXT,18,7,40,8
     EDITTEXT        IDC_INI_AUTHOR,61,27,272,12,ES_AUTOHSCROLL
     EDITTEXT        IDC_INI_DESCRIPTION,61,46,272,24,ES_MULTILINE | ES_AUTOVSCROLL | ES_WANTRETURN | WS_VSCROLL
-    LTEXT           "CRC:",IDC_ROM_CRC_TEXT,13,109,31,8
-    EDITTEXT        IDC_ROM_CRC,46,109,50,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    GROUPBOX        "ROM",IDC_ROM_INFO_TEXT,6,72,102,60
     LTEXT           "Author:",IDC_MOVIE_AUTHOR_TEXT,27,30,29,8
     LTEXT           "Description:",IDC_MOVIE_DESCRIPTION_TEXT,14,54,42,8
-    EDITTEXT        IDC_MOVIE_VIDEO_TEXT,45,145,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_SOUND_TEXT,45,158,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_INPUT_TEXT,45,169,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_RSP_TEXT,45,182,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    GROUPBOX        "Controllers",IDC_MOVIE_CONTROLLERS,150,138,102,60
-    EDITTEXT        IDC_MOVIE_CONTROLLER1_TEXT,155,147,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_CONTROLLER2_TEXT,155,159,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_CONTROLLER3_TEXT,155,171,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_CONTROLLER4_TEXT,155,183,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    LTEXT           "Length:",IDC_MOVIE_LENGTH_TEXT,120,84,36,14
-    LTEXT           "Frames:",IDC_MOVIE_FRAMES_TEXT,120,102,36,12
-    LTEXT           "Re-records:",IDC_MOVIE_RERECORDS_TEXT,120,118,36,12
-    EDITTEXT        IDC_MOVIE_LENGTH,168,84,54,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_FRAMES,168,102,54,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_RERECORDS,168,118,54,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    CONTROL         "Start",IDC_RADIO_FROM_START,"Button",BS_AUTORADIOBUTTON,252,82,78,8
-    CONTROL         "Savestate",IDC_RADIO_FROM_ST,"Button",BS_AUTORADIOBUTTON,252,94,78,8
-    CONTROL         "EEPROM",IDC_RADIO_FROM_EEPROM,"Button",BS_AUTORADIOBUTTON,252,106,78,8
-    CONTROL         "Existing Savestate",IDC_RADIO_FROM_EXISTING_ST,"Button",BS_AUTORADIOBUTTON,252,118,78,10
-    GROUPBOX        "Start from",IDC_GROUP_START_FROM,240,72,91,60
-    GROUPBOX        "Start from",IDC_GROUP_START_FROM2,114,72,120,60
-    LTEXT           "Frame",IDC_STATIC,265,151,21,8
-    GROUPBOX        "Pause at",IDC_GROUP_START_FROM3,258,138,72,60
-    CONTROL         "End",IDC_PAUSE_AT_END,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,261,182,31,12
+    CONTROL         "Start",IDC_RADIO_FROM_START,"Button",BS_AUTORADIOBUTTON,246,84,78,8
+    CONTROL         "Savestate",IDC_RADIO_FROM_ST,"Button",BS_AUTORADIOBUTTON,246,96,78,8
+    CONTROL         "EEPROM",IDC_RADIO_FROM_EEPROM,"Button",BS_AUTORADIOBUTTON,246,108,78,8
+    CONTROL         "Existing Savestate",IDC_RADIO_FROM_EXISTING_ST,"Button",BS_AUTORADIOBUTTON,246,120,78,8
+    GROUPBOX        "Start from",IDC_GROUP_START_FROM,240,72,96,66
+    LTEXT           "Frame",IDC_STATIC,246,150,21,12,SS_CENTERIMAGE
+    GROUPBOX        "Pause at",IDC_GROUP_START_FROM3,240,138,96,60
+    CONTROL         "End",IDC_PAUSE_AT_END,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,246,186,31,8
+    CONTROL         "",IDC_MOVIE_INFO_TEMPLATE,"Static",SS_BLACKFRAME,6,72,228,138
 END
 
 IDD_ROM_SETTING_DIALOG DIALOGEX 0, 0, 340, 305
