--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -624,7 +624,7 @@ BEGIN
     DEFPUSHBUTTON   "OK",IDOK,102,42,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,156,42,50,14
     LTEXT           "Seek to frame",IDC_STATIC,6,6,46,12,SS_CENTERIMAGE
-    EDITTEXT        IDC_SEEKER_FRAME,60,6,144,12,ES_AUTOHSCROLL | ES_NUMBER
+    EDITTEXT        IDC_SEEKER_FRAME,60,6,144,12,ES_AUTOHSCROLL
 END
 
 
