Seeker: Prevent unreachable seek targets

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -621,7 +621,7 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSM
 CAPTION "Seeker"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,102,42,50,14
+    DEFPUSHBUTTON   "OK",IDOK,102,42,50,14,WS_DISABLED
     PUSHBUTTON      "Cancel",IDCANCEL,156,42,50,14
     LTEXT           "Seek to frame",IDC_STATIC,6,6,46,12,SS_CENTERIMAGE
     EDITTEXT        IDC_SEEKER_FRAME,60,6,144,12,ES_AUTOHSCROLL
