Config: Add previously hidden options to UI

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -285,17 +285,17 @@ BEGIN
     GROUPBOX        "Interface",IDC_MESSAGES,6,6,216,42
     GROUPBOX        "Flow",IDC_FPSTITLE,6,54,215,30
     GROUPBOX        "Core",IDC_CPUCORE,6,144,216,108
-    CONTROL         "Interpreter",IDC_INTERP,"Button",BS_AUTORADIOBUTTON,12,162,204,8
-    CONTROL         "Dynamic Recompiler",IDC_RECOMP,"Button",BS_AUTORADIOBUTTON,12,174,204,8
-    CONTROL         "Pure Interpreter",IDC_PURE_INTERP,"Button",BS_AUTORADIOBUTTON,12,186,204,8
+    CONTROL         "Interpreter",IDC_INTERP,"Button",BS_AUTORADIOBUTTON,12,156,204,8
+    CONTROL         "Dynamic Recompiler",IDC_RECOMP,"Button",BS_AUTORADIOBUTTON,12,169,204,8
+    CONTROL         "Pure Interpreter",IDC_PURE_INTERP,"Button",BS_AUTORADIOBUTTON,12,180,204,8
     EDITTEXT        IDC_SKIPFREQ,114,66,78,12,ES_AUTOHSCROLL | ES_NUMBER
     LTEXT           "Fast forward skip frequency:",IDC_FASTFORWARDSKIPFREQ,12,66,96,12,SS_CENTERIMAGE
     PUSHBUTTON      "?",IDC_SKIPFREQUENCY_HELP,198,66,14,12
-    CONTROL         "Audio Delay",IDC_ENABLE_AUDIO_DELAY,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,12,198,96,8
-    CONTROL         "Compiled Jump",IDC_ENABLE_COMPILED_JUMP,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,12,210,96,8
-    CONTROL         "Emulate float crashes",IDC_EMULATEFLOATCRASHES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,222,96,8
-    CONTROL         "WiiVC Rounding",IDC_ROUNDTOZERO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,234,96,10
-    CONTROL         "Pause when unfocused",IDC_PAUSENOTACTIVE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,18,174,8
+    CONTROL         "Audio Delay",IDC_ENABLE_AUDIO_DELAY,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,12,192,96,8
+    CONTROL         "Compiled Jump",IDC_ENABLE_COMPILED_JUMP,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,12,204,96,8
+    CONTROL         "Emulate float crashes",IDC_EMULATEFLOATCRASHES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,216,96,8
+    CONTROL         "WiiVC Rounding",IDC_ROUNDTOZERO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,228,96,10
+    CONTROL         "Pause when unfocused",IDC_PAUSENOTACTIVE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,18,96,8
     GROUPBOX        "Encoding",IDC_FPSTITLE2,6,84,215,48
     CONTROL         "Record resets",IDC_RECORD_RESETS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,96,100,8
     CONTROL         "Force internal avi capture",IDC_FORCEINTERNAL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,108,96,8
@@ -303,6 +303,9 @@ BEGIN
     CONTROL         "Capture other windows",IDC_CAPTUREOTHER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,114,96,91,8
     LTEXT           "Capture delay:",IDC_STATIC,114,114,49,12
     EDITTEXT        IDC_CAPTUREDELAY,164,114,35,12,ES_AUTOHSCROLL | ES_NUMBER
+    CONTROL         "Statusbar 0-index",IDC_STATUSBARZEROINDEX,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,30,96,8
+    CONTROL         "Autoincrement save slot",IDC_AUTOINCREMENTSAVESLOT,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,120,192,96,8
 END
 
 IDD_MOVIE_DIALOG DIALOGEX 0, 0, 343, 218
