View: Move CPU clock speed multiplier into general tab

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -189,13 +189,11 @@ IDD_OTHER_OPTIONS_DIALOG DIALOGEX 0, 0, 231, 273
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
-    CONTROL         "No Synchronisation",IDC_AV_NOSYNC,"Button",BS_AUTORADIOBUTTON,18,54,120,8
+    CONTROL         "No Synchronisation",IDC_AV_NOSYNC,"Button",BS_AUTORADIOBUTTON,12,18,120,8
     CONTROL         "Audio-Authoritative Synchronisation",IDC_AV_AUDIOSYNC,
-                    "Button",BS_AUTORADIOBUTTON,18,66,132,8
-    CONTROL         "Old Video Synchronisation",IDC_AV_VIDEOSYNC,"Button",BS_AUTORADIOBUTTON,18,78,144,8
-    LTEXT           "CPU Clock Speed Multiplier",IDC_CLOCK_SPD_MULT,12,102,144,8
-    COMBOBOX        IDC_COMBO_CLOCK_SPD_MULT,12,114,197,100,CBS_DROPDOWNLIST | WS_TABSTOP
-    GROUPBOX        "A/V Synchronization",IDC_STATIC,12,42,198,54
+                    "Button",BS_AUTORADIOBUTTON,12,30,132,8
+    CONTROL         "Old Video Synchronisation",IDC_AV_VIDEOSYNC,"Button",BS_AUTORADIOBUTTON,12,42,144,8
+    GROUPBOX        "A/V Synchronization",IDC_STATIC,6,6,216,54
 END
 
 IDD_LUAWINDOW DIALOGEX 0, 0, 240, 166
@@ -278,13 +276,13 @@ BEGIN
     CONTROL         "",IDB_RSP,"Static",SS_BITMAP,13,198,15,13
 END
 
-IDD_MESSAGES DIALOGEX 0, 0, 231, 262
+IDD_MESSAGES DIALOGEX 0, 0, 231, 281
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
     GROUPBOX        "Interface",IDC_MESSAGES,6,6,216,42
     GROUPBOX        "Flow",IDC_FPSTITLE,6,54,215,30
-    GROUPBOX        "Core",IDC_CPUCORE,6,144,216,108
+    GROUPBOX        "Core",IDC_CPUCORE,6,144,216,126
     CONTROL         "Interpreter",IDC_INTERP,"Button",BS_AUTORADIOBUTTON,12,156,204,8
     CONTROL         "Dynamic Recompiler",IDC_RECOMP,"Button",BS_AUTORADIOBUTTON,12,169,204,8
     CONTROL         "Pure Interpreter",IDC_PURE_INTERP,"Button",BS_AUTORADIOBUTTON,12,180,204,8
@@ -293,8 +291,8 @@ BEGIN
     PUSHBUTTON      "?",IDC_SKIPFREQUENCY_HELP,198,66,14,12
     CONTROL         "Audio Delay",IDC_ENABLE_AUDIO_DELAY,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,12,192,96,8
     CONTROL         "Compiled Jump",IDC_ENABLE_COMPILED_JUMP,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,12,204,96,8
-    CONTROL         "Emulate float crashes",IDC_EMULATEFLOATCRASHES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,216,96,8
-    CONTROL         "WiiVC Rounding",IDC_ROUNDTOZERO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,228,96,10
+    CONTROL         "Emulate float crashes",IDC_EMULATEFLOATCRASHES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,120,204,96,8
+    CONTROL         "WiiVC Rounding",IDC_ROUNDTOZERO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,216,96,10
     CONTROL         "Pause when unfocused",IDC_PAUSENOTACTIVE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,18,96,8
     GROUPBOX        "Encoding",IDC_FPSTITLE2,6,84,215,48
     CONTROL         "Record resets",IDC_RECORD_RESETS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,96,100,8
@@ -306,6 +304,8 @@ BEGIN
     CONTROL         "Statusbar 0-index",IDC_STATUSBARZEROINDEX,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,30,96,8
     CONTROL         "Autoincrement save slot",IDC_AUTOINCREMENTSAVESLOT,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,120,192,96,8
+    LTEXT           "CPU Clock Speed Multiplier",IDC_CLOCK_SPD_MULT,12,228,144,8
+    COMBOBOX        IDC_COMBO_CLOCK_SPD_MULT,12,240,204,100,CBS_DROPDOWNLIST | WS_TABSTOP
 END
 
 IDD_MOVIE_DIALOG DIALOGEX 0, 0, 343, 218
@@ -475,6 +475,7 @@ BEGIN
 
     IDD_MESSAGES, DIALOG
     BEGIN
+        BOTTOMMARGIN, 275
     END
 
     IDD_MOVIE_DIALOG, DIALOG
