--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -198,7 +198,7 @@ END
 
 IDD_LUAWINDOW DIALOGEX 0, 0, 240, 166
 STYLE DS_SETFONT | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_VISIBLE | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
-CAPTION "LUA Instance"
+CAPTION "Lua Instance"
 FONT 8, "Ms Shell Dlg", 0, 0, 0x1
 BEGIN
     PUSHBUTTON      "Run",IDC_BUTTON_LUASTATE,192,24,42,19
